[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [{ name = "Edoardo Arnaudo", email = "edoardo.arn@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Software Development",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "pydantic >= 2.8.0, < 3.0",
  "pydantic-settings >= 2.4.0, < 3"
]
dynamic = ["version", "description"]
license = { file = "LICENSE" }
name = "argdantic"
readme = "README.md"

[project.urls]
Home = "https://github.com/edornd"

[project.optional-dependencies]
all = [
  "python-dotenv >= 1.0.0, < 2.0",
  "orjson >= 3.10.0, < 4.0",
  "toml >= 0.10.0, < 1.0",
  "tomli >= 2.0, < 3.0",
  "pyyaml >= 6.0.0, < 7.0",
  "tomli-w >= 1.0.0, < 2.0",
]
dev = [
  "flit >= 3.9.0, < 4.0",
  "ruff >= 0.5.6, < 1.0",
]
docs = [
  "mkdocs >= 1.6.0, < 2.0",
  "mkdocs-material >= 9.5.0, < 10.0",
  "mdx-include >= 1.4.0, < 2.0",
]
env = [
  "python-dotenv >= 1.0.0, < 2.0"
]
json = [
  "orjson >= 3.10.0, < 4.0"
]
test = [
  "coverage >= 7.6.0, < 8.0",
  "mock >= 5.1.0, < 6.0",
  "pytest >= 8.3.0, < 9.0",
  "pytest-cov >= 5.0.0, < 6.0",
  "pytest-xdist >= 3.6.0, < 4.0",
]
toml = [
  "toml >= 0.10.0, < 1.0",
  "tomli >= 2.0, < 3.0",
  "tomli-w >= 1.0.0, < 2.0",
]
yaml = [
  "pyyaml >= 6.0.0, < 7.0"
]

[tool.ruff]
line-length = 120

[tool.mypy]
modules = "argdantic"
exclude = ["tests"]

[tool.pytest.ini_options]
addopts = "-ra --capture=sys"
log_cli = true
log_cli_level = "info"
minversion = "6.0"
testpaths = ["tests"]
